--- a/index.css
+++ b/index.css
@@ -106,6 +106,7 @@
   margin: 10px;
   background-color: lightcyan;
   height: 250px;
+  width: 250px;
 }
 
 .res-logo img {
@@ -132,5 +133,8 @@
   margin: 5px 0;
 }
 
-
+.filter-button {
+  margin: 10px;
+  cursor: pointer;
+}
 
