--- a/index.css
+++ b/index.css
@@ -94,6 +94,7 @@
   align-items: center;
   gap: 20px; /* Adjust the gap as needed */
   margin-top: 20px; /* Adjust the margin as needed */
+  text-align: center;
 }
 
 
@@ -165,4 +166,25 @@
 
 .filter {
   margin: 10px;
+}
+
+.contact-us {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.about {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+
+.error {
+  text-align: center;
+  background-color: #f0f0f0;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
