--- a/index.css
+++ b/index.css
@@ -188,3 +188,14 @@
   border-radius: 5px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
+
+.menu-container {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.user-card {
+  border: 1px solid #444040;
+  border-radius: 8px;
+}
