--- a/index.css
+++ b/index.css
@@ -1,5 +1,10 @@
 /* Apply some basic styles to the app layout */
-.app {
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* .app {
     font-family: Arial, sans-serif;
   }
   
@@ -44,8 +49,6 @@
     cursor: pointer;
 }
 
-  
-  /* Add hover effect to navigation items */
   .nav-items li:hover {
     color: #007bff;
   }
@@ -82,7 +85,7 @@
 .search-container {
   display: flex;
   align-items: center;
-  justify-content: flex-end; /* Change to flex-end to move items to the right */
+  justify-content: flex-end; 
   padding: 10px;
   
 }
@@ -92,8 +95,8 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  gap: 20px; /* Adjust the gap as needed */
-  margin-top: 20px; /* Adjust the margin as needed */
+  gap: 20px;
+  margin-top: 20px; 
   text-align: center;
 }
 
@@ -111,10 +114,10 @@
 }
 
 .res-logo img {
-  width: 150px; /* Adjust the width */
-  height: 150px; /* Adjust the height */
-  border-radius: 50%; /* To make it a circular image */
-  object-fit: cover; /* Maintain image aspect ratio while covering the container */
+  width: 150px; 
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
 
@@ -209,4 +212,4 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-}
+} */
