--- a/index.css
+++ b/index.css
@@ -4,6 +4,21 @@
 @tailwind components;
 @tailwind utilities;
 
+.shimmer-card {
+  width: 200px;
+  height: 300px;
+  background-color: #f0f0f0;
+  margin: 20px;
+  padding-top: 20px;
+}
+
+.shimmer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
 /* .app {
     font-family: Arial, sans-serif;
   }
